--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^8.5.6"
   }
 }
